Replace raw foreign key value in newsfeeds with primary descriptors

--- a/app/views/newsfeed_templates/index.html.erb
+++ b/app/views/newsfeed_templates/index.html.erb
@@ -58,7 +58,7 @@
 
         <!-- Display newsfeed.user_id start -->
         <td>
-          <%= newsfeed.user_id %>
+          <%= newsfeed.user.email %>
         </td>
         <!-- Display newsfeed.user_id end -->
 
