--- a/app/views/profile_templates/_profile_newsfeeds_new_form.html.erb
+++ b/app/views/profile_templates/_profile_newsfeeds_new_form.html.erb
@@ -4,7 +4,7 @@
 
   <!-- Label and input for user_id start -->
   <!-- Input for user_id start -->
-  <input type="hidden" name="user_id" value="<%= @profile.id %>">
+    <%= select_tag(:user_id, options_from_collection_for_select(User.all, :id, :email, @newsfeed.user_id), :class => "form-control") %>
   <!-- Input for user_id end -->
 
   <!-- Label and input for profile_id start -->
